# xunsearch

./: .gitignore  AUTHORS  COPYING  ChangeLog  Dockerfile  Dockerfile.alpine  Makefile.am  NEWS  README  README.arch  README.install  README.md  TODO  acprep  configure.ac  dist-sh  docker-entrypoint.sh  notify-sh  version-sh
dev/: index.php
dev/commands/api/assets/css/: guide.css
dev/commands/api/views/: chmContents.php  chmIndex2.php  class.php  guide.php  index.php  propertySummary.php  seeAlso.php  sourceCode.php
dev/controllers/: SiteController.php
dev/data/: py.txt
dev/vendors/: XMarkdown.php
dev/views/site/: guide.php
doc/guide/: class.search.txt  index.clean.txt  ini.first.txt  search.hot.txt  special.scws.txt  util.indexer.txt  util.ini.txt
etc/: dict_user.txt  py.xdb  stopwords.txt
sdk/: Makefile.am  gen-phpinc.sh
sdk/php/: .gitattributes  README.md  composer.json
sdk/php/app/: demo.ini
sdk/php/dev/: build.php  server.php
sdk/php/dev/commands/: DocCommand.php  LiteCommand.php  PinyinCommand.php
sdk/php/dev/commands/api/: ApiModel.php
sdk/php/dev/commands/api/assets/css/: guide.css
sdk/php/dev/commands/api/layouts/: main.php
sdk/php/dev/commands/api/views/: chmContents2.php  chmIndex.php  chmProject.php  chmProject2.php  classSummary.php  eventDetails.php  eventSummary.php  guide.php  methodDetails.php  methodSummary.php  propertyDetails.php  sourceCode.php
sdk/php/dev/controllers/: SiteController.php
sdk/php/dev/data/: py.txt  yj.txt
sdk/php/dev/vendors/: Markdown.php  MarkdownParser.php  PinYin.class.php  xdb.class.php
sdk/php/dev/views/layouts/: main.php
sdk/php/dev/views/site/: index.php
sdk/php/doc/: ABOUT  ARCHITECTURE  BUGS  CHANGELOG.md  DEMO  DONATE  DOWNLOAD  DOWNLOAD.md  FEATURE  LICENSE.md  README  README.md  README.md.md  SUPPORT  TODO  UPGRADE.md  USERCASE  xs_introduce.ppt
sdk/php/doc/guide/: class.document.txt  class.exception.txt  class.index.md  class.overview.txt  class.tokenizer.md  class.xs.txt  index.add.txt  index.buffer.txt  index.del.txt  index.dict.txt  index.overview.txt  index.rebuild.txt  index.update.txt  ini.first.txt  ini.guide.txt  ini.tokenizer.txt  search.count.md  search.facet.txt  search.fix.txt  search.overview.txt  search.query.md  search.query.txt  search.rel.txt  search.search.md  search.search.txt  special.scws.txt  special.synonym.txt  start.about.md  start.about.txt  start.changelog.txt  start.convention.md  start.demo.txt  start.installation.txt  start.overview.md  start.workflow.txt  toc.md  toc.txt  util.check.txt  util.indexer.txt  util.ini.txt  (+4 more)
sdk/php/lib/: XS.class.php  XSDocument.class.php  XSFieldScheme.class.php  XSIndex.class.php  XSSearch.class.php  XSServer.class.php  XSTokenizer.class.php  xs_cmd.inc.php
sdk/php/tests/: bootstrap.php  burst.php  phpunit.xml
sdk/php/tests/lib/: XSCommandTest.php  XSComponentTest.php  XSDocumentTest.php  XSErrorExceptionTest.php  XSExceptionTest.php  XSFieldMetaTest.php  XSFieldSchemeTest.php  XSIndexTest.php  XSSearchTest.php  XSServerTest.php  XSTest.php  XSTokenizerFullTest.php  XSTokenizerNoneTest.php  XSTokenizerScwsTest.php  XSTokenizerSplitTest.php  XSTokenizerXlenTest.php  XSTokenizerXstepTest.php
sdk/php/util/: Indexer.php  IniWizzard.php  Logger.php  Quest.php  RequiredCheck.php  SearchSkel.php  XSDataSource.class.php  XSUtil.class.php  xs
sdk/php/util/skel/: search.php.in  search.tpl.in  suggest.php.in
sdk/php/util/skel/css/: bootstrap-ie6.css  style.css
sdk/php/wrapper/yii-ext/: EXunSearch.php  README.md
sdk/php/wrapper/yii2-ext/: ActiveQuery.php  ActiveRecord.php  Connection.php  Database.php  DebugAction.php  DebugPanel.php  QueryBuilder.php
src/: Makefile.am  conn.c  conn.h  flock.c  flock.h  global.h  import.cc  import.h  indexd.c  indexd.h  log.c  log.h  logging.cc  mcache.c  mcache.h  md5.c  md5.h  mm.c  mm.h  pcntl.c  pcntl.h  pinyin.c  pinyin.h  searchd.cc  searchd.h  task.cc  task.h  tpool.c  tpool.h  user.c  user.h  xs-ctl.sh.in  xs-optimize.sh.in  xs_cmd.h
tests/: bootstrap.php
tests/lib/: XSSearchTest.php  XSServerTest.php  XSTokenizerXstepTest.php
util/: Indexer.php  XSUtil.class.php
util/skel/: search.php.in
xapian-scws/: README.scws  after_patch.sh  before_patch.sh  gen_patch.sh  patch.xapian-core-scws  patch.xapian-core-scws-1.2.7  patch.xapian-core-scws-1.3.x  xapian-scws-1.3.x-snap.patch
xunsearch-full/: README.md  setup.sh
